--- a/package.json
+++ b/package.json
@@ -9,18 +9,44 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "better-react-mathjax": "^2.0.3",
+    "class-variance-authority": "^0.7.0",
+    "clone-deep": "^4.0.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "echarts": "^5.5.1",
+    "echarts-for-react": "^3.0.2",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
+    "json": "^11.0.0",
+    "lodash.clonedeep": "^4.5.0",
+    "lucide-react": "^0.453.0",
+    "mathjax": "^3.2.2",
+    "next": "14.2.16",
     "react": "^18",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
-    "next": "14.2.16"
+    "react-icons": "^5.3.0",
+    "react-toastify": "^10.0.6",
+    "sheetjs": "^2.0.0",
+    "sonner": "^1.7.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/lodash.clonedeep": "^4.5.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.16",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.16"
+    "typescript": "^5"
   }
 }
